bug fix sections titile not showing proprely on Ipad Pro

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,8 +186,8 @@ a {
   padding-right: 50px;
 }
 
-/* Hide the Project & Contact title and show a new one if width < 850px */
-@media screen and (max-width: 850px) {
+/* Hide the Project & Contact title and show a new one if width < 1100px */
+@media screen and (max-width: 1100px) {
   .hidden{
     display: block;
   }
